include udates within the cmake file to export EHM as top header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,8 @@
 cmake_minimum_required(VERSION 3.22)
 project(EHM)
 
-# find dependencies
 find_package(Eigen3 REQUIRED)
 
-
-# # Create a include folder in the build directory
-# file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/EHM)
-# # Copy .h files using glob pattern into the build directory keeping the folder structure
-# file(GLOB_RECURSE EHM_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
-# foreach(EHM_HEADER ${EHM_HEADERS})
-#     file(RELATIVE_PATH REL_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/src ${EHM_HEADER})
-#     get_filename_component(REL_HEADER_PATH ${REL_HEADER} PATH)
-#     file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/EHM/${REL_HEADER_PATH})
-#     configure_file(${EHM_HEADER} ${CMAKE_CURRENT_SOURCE_DIR}/include/EHM/${REL_HEADER} COPYONLY)
-# endforeach()
 
 add_library(EHM
     STATIC
@@ -28,11 +16,13 @@ add_library(EHM
     src/utils/Cluster.cpp
     src/utils/Utils.cpp
 )
+
 target_include_directories(
   EHM
   SYSTEM PUBLIC
   $<INSTALL_INTERFACE:include>
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/EHM>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   PRIVATE
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/EHM>
   ${EIGEN3_INCLUDE_DIR}
 )
